--- a/public/index.html
+++ b/public/index.html
@@ -33,6 +33,9 @@
         </div>
     </div>
 
+    <div class="scoreboard short">
+        <p>Two players must choose different sides, then click start. :) </p>
+    </div>
 
     <div class="scoreboard short">
         <div class="col">
